2012-02-28  Jacky Jiang  <zhajiang@rim.com>

        [BlackBerry] x86 build fix after cleaning up WebPage.cpp
        https://bugs.webkit.org/show_bug.cgi?id=79814

        Reviewed by Antonio Gomes.

        x86 build fix, keep WebPage::destroyWebPageCompositor() method where it
        was which was outside of USE(ACCELERATED_COMPOSITING).

        * Api/WebPage.cpp:
        (BlackBerry::WebKit::WebPage::destroyWebPageCompositor):
        (WebKit):

2012-02-28  Mike Fenton  <mifenton@rim.com>

        [BlackBerry] Remove unused focusedNodeChange notifications from the Chrome client.
        https://bugs.webkit.org/show_bug.cgi?id=79794

        Reviewed by Rob Buis.

        Remove unused notification for focusedNodeChanged.

        Internally reviewed by Gen Mak.

        * Api/WebPageClient.h:
        * WebCoreSupport/ChromeClientBlackBerry.cpp:
        (WebCore::ChromeClientBlackBerry::focusedNodeChanged):

2012-02-27  Jacky Jiang  <zhajiang@rim.com>

        [BlackBerry] Upstream BlackBerry API web page related files
        https://bugs.webkit.org/show_bug.cgi?id=74380

        Reviewed by Antonio Gomes.

        Clean up WebPage.{h, cpp} and WebPage_p.h.
        - Remove WebPage::mainFrame() as it is bad to expose WebCore::Frame in
          the public API, adapt to the change by adding a new method
          WebPagePrivate::core(Const WebPage*) and expose it to
          DumpRenderTreeSupport.
        - Rename WebPage::spellCheckingEnabled to
          WebPage::setSpellCheckingEnabled.
        - Remove unused WebPage::focusNodeRect().
        - Remove extra blank lines.
        - Put WebPage methods and their associated WebPagePrivate methods
          together.

        No new tests as this patch doesn't change behavior.

        * Api/WebPage.cpp:
        (BlackBerry::WebKit::WebPage::WebPage):
        (WebKit):
        (BlackBerry::WebKit::WebPage::~WebPage):
        (BlackBerry::WebKit::WebPagePrivate::core):